# repute

./: README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  tox.yml
demo/: README.md  main.py  pyproject.toml  requirements.txt
reputation/: cache.py  data.py  main.py  paths.py  pypi.py  requirements.py
reputation/github/: web.py
reputation/io/: orjson.py
reputation/pypi/: analytics.py  cache.py  web.py
repute/: __init__.py  analysis.py  cache.py  constants.py  data.py  main.py  paths.py  requirements.py
repute/github/: analytics.py  data.py  web.py
repute/pypi/: analytics.py  github.py  stats.py  web.py
tests/: test_data.py
