[project]
name = "repute"
version = "0.0.2"
description = "Python package dependency analytics. Know what you depend on!"
authors = [{ name = "Zach Kurtz", email = "zkurtz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "dummio>=1.10.0",
    "orjson>=3.10.15",
    "pandahandler>=0.7.4",
    "pandas >=1.5.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
  "pre-commit==4.0.1",
  "pyright==1.1.391",
  "ruff==0.8.5",
  "pytest==8.3.4",
  "bump-my-version>=0.30.0",
]

[project.scripts]
repute = "repute.main:main"

[project.urls]
Source = "https://github.com/zkurtz/repute"

[tool.uv]
package = true

[tool.uv.workspace]
members = ["demo"]

[tool.bumpversion]
current_version = "0.0.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
tag = false
allow_dirty = true
commit = false

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.pyright]
include = ["repute", "tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  # ruff defaults:
  "E4", "E7", "E9", "F",
  # other rule groups:
  "E5", # line length
  "I", # flake8-import-order
  "TID", # flake8-tidy-imports
  "D", # google-style docstrings
]
ignore = [
  "D202", # would require one blank line after the last section of a multi-line docstring
  "D203", # would require one blank line at start of class docstring
  "D213", # would require multi-line docstring to start with a hard return
  "D401", # would require imperative mood in docstring
  "D413", # would put blank line at end of each multiline docstring
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"] # would require module-level documentation
"test_*.py" = ["D"]
